[package]
name = "comere"
version = "0.1.0"
authors = ["Martin Hafskjold Thoresen <martinhath@gmail.com>"]

[dependencies]
lazy_static = "*"
bench = { path = './bench' }
crossbeam = "*"
bencher = "*"

[dev-dependencies]
rand = "*"
time = "*"

[profile.bench]
debug = true

[[bin]]
name = "queue-transfer-ebr"
path = "benches/queue-transfer-ebr.rs"

[[bin]]
name = "queue-transfer-crossbeam"
path = "benches/queue-transfer-crossbeam.rs"

[[bin]]
name = "queue-transfer-hp"
path = "benches/queue-transfer-hp.rs"

[[bench]]
name = "queue"
harness = false

[[bench]]
name = "list"
harness = false

[features]
default = []
# Should the HP implmementation repeatedly scan and wait for other threads to unregister a HP when
# we want to drop that HP?
hp-wait = []
